# Spelman

./: .gitignore  AGENTS.md  AI-IDEAS.md  ASCIIART.md  CLAUDE.md  Cargo.toml  GITNEXUS.md  LICENSE  README.md  ROADMAP.md  RUST_ENGINEER.md  gitnexus_AGENTS.md  install.sh
.github/workflows/: ci.yml  packages.yml  release.yml
packaging/: PKGBUILD  com.github.spelman.desktop  com.github.spelman.yml  spelman.spec
scripts/: sync-version.py
src/: app.rs  main.rs
src/audio/: bridge.rs  decoder.rs  engine.rs  eq.rs  mod.rs  pipeline.rs  volume.rs
src/config/: settings.rs
src/coordinator/: ai.rs  mod.rs  player.rs
src/lyrics/: fetch.rs  lrc.rs  mod.rs
src/playlist/: mod.rs  playlist.rs  queue.rs
src/pomodoro/: timer.rs
src/ui/: albumart.rs  imgproto.rs  input.rs  layout.rs  mod.rs
src/ui/tabs/: home.rs  library.rs  mod.rs  playing.rs  playlists.rs  pomodoro.rs  search.rs  settings.rs
src/ui/widgets/: chroma.rs  eq.rs  mod.rs  progress_bar.rs  shimmer.rs  visualizer.rs  waveform.rs
src/util/: channels.rs  error.rs  format.rs  mod.rs
