[package]
name = "spelman"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spelman"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Audio I/O
cpal = "0.15"

# Audio decoding
symphonia = { version = "0.5", features = [
    "mp3", "flac", "ogg", "vorbis", "wav", "pcm", "aac", "isomp4",
] }

# Inter-thread communication
crossbeam-channel = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Metadata
lofty = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# XDG directories
directories = "6"
