[package]
name = "spelman"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A terminal music player written in Rust"
license = "MIT"
repository = "https://github.com/petterssonjonas/Spelman"
homepage = "https://github.com/petterssonjonas/Spelman"
authors = ["Jonas Pettersson"]

[[bin]]
name = "spelman"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Audio I/O
cpal = "0.15"

# Audio decoding
symphonia = { version = "0.5", features = [
    "mp3", "flac", "ogg", "vorbis", "wav", "pcm", "aac", "isomp4",
] }

# Inter-thread communication
crossbeam-channel = "0.5"

# Lock-free SPSC ring buffer (replaces hand-rolled unsafe RingBuffer)
rtrb = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Metadata
lofty = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# XDG directories
directories = "6"

# FFT for spectrum visualizer
rustfft = "6"

# Unicode display width (for centering ASCII art)
unicode-width = "0.2"

# Image processing (album art)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

[package.metadata.deb]
section = "sound"
depends = "libasound2"
assets = [
    ["target/release/spelman", "usr/bin/", "755"],
    ["packaging/com.github.spelman.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/spelman/", "644"],
]
